--- a/frontend/src/app/components/stats/stats.component.html
+++ b/frontend/src/app/components/stats/stats.component.html
@@ -2,7 +2,7 @@
 <div class="left-side">
   <div class="stats-item">
     <div class="stats-item-title">Scenarios</div>
-    <div class="stats-item-value">6 Test Cases</div>
+    <div class="stats-item-value">{{ casesCount }} Test Cases</div>
   </div>
 
   <div class="stats-item">
