--- a/frontend/src/app/components/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/top-menu/top-menu.component.html
@@ -1,6 +1,6 @@
 <ul class="topmenu">
-  <li class="topmenu-item page-action">Run</li>
-  <li class="topmenu-item page-action">Clone</li>
-  <li class="topmenu-item page-action">Delete</li>
+  <li class="topmenu-item page-action" (click)="onActionClick.emit('Run')">Run</li>
+  <li class="topmenu-item page-action" (click)="onActionClick.emit('Clone')">Clone</li>
+  <li class="topmenu-item page-action" (click)="onActionClick.emit('Delete')">Delete</li>
   <li class="topmenu-item page-action topmenu-item--main"><button type="submit">Save</button></li>
 </ul>
