Run one scenario (by filter)

--- a/frontend/src/app/components/scenario-card/scenario-card.component.html
+++ b/frontend/src/app/components/scenario-card/scenario-card.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="card-actions">
-    <div class="card-action">
+    <div class="card-action" (click)="runClick.emit(title)">
       <i class="material-icons">play_arrow</i>
     </div>
   </div>
