--- a/frontend/src/app/components/scenario-card/scenario-card.component.css
+++ b/frontend/src/app/components/scenario-card/scenario-card.component.css
@@ -61,6 +61,7 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: color .25s, border-color .25s;
+  user-select: none;
 }
 
 .card-action:hover {
