--- a/frontend/src/app/components/sidebar/sidebar.component.css
+++ b/frontend/src/app/components/sidebar/sidebar.component.css
@@ -1,9 +1,10 @@
 :host {
 
-  width: 100%;
   height: 100%;
+  min-width: 321px;
   display: block;
 
+  color: var(--schema-white);
   background-color: var(--schema-dark);
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
 
@@ -13,6 +14,5 @@
 }
 
 h2 {
-  color: var(--schema-white);
   padding-bottom: 10px;
 }
