--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,22 +1,3 @@
-<h2>Configuration</h2>
+<h2>{{title}}</h2>
 
-<app-menu-section
-  [icon]="'desktop_windows'"
-  [header]="'Viewports'"
-  [items]="viewports"
-  (itemClick)="selectViewport.emit($event)"
-  (addClick)="createViewport.emit($event)"
->
-</app-menu-section>
-
-
-<app-menu-section
-  [icon]="'web'"
-  [header]="'Scenarios'"
-  [theme]="'yellow'"
-  [items]="scenarios"
-  [selected]="selectedScenarioLabel"
-  (itemClick)="selectScenario.emit($event)"
-  (addClick)="createScenario.emit($event)"
->
-</app-menu-section>
+<ng-content></ng-content>
