--- a/frontend/src/app/view/history-record/history-record.component.html
+++ b/frontend/src/app/view/history-record/history-record.component.html
@@ -18,18 +18,21 @@
   <div *ngFor="let t of (report$ | async)?.tests">
     <p>
       <a href="{{ t.pair.url }}" target="_blank" rel="nofollow noopener">{{ t.pair.label }}</a>
-      <br>
-      {{ t.status }} | {{ t.pair.viewportLabel }}
+      <br>{{ t.pair.viewportLabel }}
       <br>
       Screenshots:
       <a *ngIf="t.pair.reference" href="{{storageUrl}}{{ t.pair.reference }}" target="_blank" rel="nofollow noopener">Reference</a> |
       <a *ngIf="t.pair.test" href="{{storageUrl}}{{ t.pair.test }}" target="_blank" rel="nofollow noopener">Test</a> |
       <a *ngIf="t.pair.diffImage" href="{{storageUrl}}{{ t.pair.diffImage }}" target="_blank" rel="nofollow noopener">Diff</a>
     </p>
-    <p *ngIf="t.pair.error">
-      <em>Error: {{ t.pair.error }}</em>
+    <p *ngIf="t.pair.engineErrorMsg">
+      <em>Error: {{ t.pair.engineErrorMsg }}</em>
     </p>
-    <img width="300px" src="{{storageUrl}}{{ t.pair.test }}" alt="">
+    <p>
+      Result: {{ t.status }}
+      <button *ngIf="t.status === 'fail'" (click)="approveCase(t.pair)">Approve</button>
+    </p>
+    <img src="{{storageUrl}}{{ t.pair.test }}" alt="">
   </div>
 
 </div>
