--- a/frontend/src/app/components/menu-section/menu-section.component.html
+++ b/frontend/src/app/components/menu-section/menu-section.component.html
@@ -10,7 +10,7 @@
       <i class="material-icons">{{ icon }}</i>
       <span>{{ header }}</span>
     </h4>
-    <i class="material-icons action-button" (click)="addClick()">add_circle_outline</i>
+    <i class="material-icons action-button" (click)="headerActionClick.emit()">{{headerActionIcon || 'add_circle_outline'}}</i>
   </div>
 
   <ul class="items">
