--- a/frontend/src/app/view/configuration/configuration.component.css
+++ b/frontend/src/app/view/configuration/configuration.component.css
@@ -86,6 +86,7 @@ label {
   white-space: nowrap;
 }
 
+input[type=number]:not(.browser-default),
 input[type=text]:not(.browser-default),
 input {
 
@@ -98,4 +99,9 @@ input {
   font-size: 12px;
   font-weight: 400;
   margin: 0;
+}
+
+
+.modal {
+  width: 40%;
 }
