--- a/frontend/src/app/components/menu-section/menu-section.component.html
+++ b/frontend/src/app/components/menu-section/menu-section.component.html
@@ -15,10 +15,10 @@
 
   <ul class="items">
     <li
-      *ngFor="let i of items" class="item-value"
-      (click)="itemClick.emit(i)"
-      [ngClass]="{'item-value--active': i === selected}"
-    >{{ i }}</li>
+      *ngFor="let item of items" class="item-value"
+      (click)="itemClick.emit(item)"
+      [ngClass]="{'item-value--active': item === selected}"
+    ><span>{{ item }}</span><i *ngIf="itemActionIcon" class="material-icons tiny" (click)="itemActionClick.emit(item)">{{ itemActionIcon }}</i></li>
   </ul>
 
 </div>
