--- a/frontend/src/app/components/menu-section/menu-section.component.css
+++ b/frontend/src/app/components/menu-section/menu-section.component.css
@@ -46,6 +46,9 @@ h4 .material-icons {
   border-left: 3px solid transparent;
   cursor: pointer;
   transition: background 0.25s, border-color 0.25s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h4 {
@@ -60,4 +63,11 @@ h4 {
 .item-value--active {
   border-left: 3px solid var(--themeColor);
   background: var(--menu-item-accent);
+}
+
+.item-value .material-icons {
+  display: none;
+}
+.item-value:hover .material-icons {
+  display: inline;
 }
