save... (proxying POST with CORS issue)

--- a/auth-proxy/views/index.ejs
+++ b/auth-proxy/views/index.ejs
@@ -31,6 +31,9 @@
     <hr>
 
     <a href="/api/test/config">/api/test/config</a>
+    <form action="/api/test/run" method="post">
+        <button type="submit">POST /api/test/run</button>
+    </form>
 
 </body>
 </html>
