--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -3,5 +3,5 @@
   <a class="navbar-item" routerLinkActive="navbar-item--active" [routerLink]="['/config/1']"><i class="material-icons">view_list</i></a>
   <a class="navbar-item" routerLinkActive="navbar-item--active" [routerLink]="['/history/1']"><i class="material-icons">ballot</i></a>
   <a class="navbar-item" routerLinkActive="navbar-item--active" [routerLink]="['/settings']"><i class="material-icons">settings</i></a>
-  <a class="navbar-item" routerLinkActive="navbar-item--active" [routerLink]="['/profile']"><i class="material-icons">person_outline</i></a>
+  <a class="navbar-item" routerLinkActive="navbar-item--active" [routerLink]="['/login']"><i class="material-icons">person_outline</i></a>
 </nav>
