--- a/frontend/src/app/view/login/login.component.html
+++ b/frontend/src/app/view/login/login.component.html
@@ -1,9 +1,17 @@
 <div class="main-container">
+
   <form (ngSubmit)="loginHandler(loginForm)" #loginForm="ngForm">
     <input type="text" name="user" ngModel required><br>
     <input type="password" name="password" ngModel required><br>
-    <button type="submit">Login</button>
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
+
+  <hr>
+
+  <form (ngSubmit)="logoutHandler()">
+    <button type="submit">Logout</button>
+  </form>
+
 </div>
 
 
