--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -6,6 +6,8 @@
         [icon]="'desktop_windows'"
         [header]="'Viewports'"
         [items]="viewports$ | async"
+        [itemKey]="'_id'"
+        [itemValue]="'label'"
         (headerActionClick)="addViewportHandler()"
         [itemActionIcon]="'close'"
         (itemActionClick)="removeViewportHandler($event)"
@@ -18,6 +20,8 @@
         [header]="'Scenarios'"
         [theme]="'yellow'"
         [items]="scenarios$ | async"
+        [itemKey]="'_id'"
+        [itemValue]="'label'"
         [selected]="selectedScenarioLabel$ | async"
         (itemClick)="selectScenarioHandler($event)"
         (headerActionClick)="addScenarioHandler()"
