--- a/frontend/src/app/view/history-record/history-record.component.html
+++ b/frontend/src/app/view/history-record/history-record.component.html
@@ -7,6 +7,8 @@
     [header]="'Completed jobs'"
     [headerActionIcon]="'refresh'"
     [items]="records$ | async"
+    [itemKey]="'_id'"
+    [itemValue]="'date'"
     [selected]="selected"
     (itemClick)="selectRecordHandler($event)"
     (headerActionClick)="refreshHandler()"
