Refactoring. works: run tests, approve results, editing viewports, show/create/update/delete scenarios

--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -38,6 +38,10 @@
     <form (ngSubmit)="saveHandler(formRef)" #formRef="ngForm">
 
       <input type="hidden"
+             [ngModel]="(selectedScenario$ | async)._id"
+             name="_id">
+
+      <input type="hidden"
              [ngModel]="(selectedScenario$ | async).label"
              name="label">
 
