--- a/auth-proxy/views/index.ejs
+++ b/auth-proxy/views/index.ejs
@@ -26,7 +26,7 @@
         <button type="submit">Logout</button>
     </form>
 
-    <em><%= loginResult || '' %></em>
+    <em><%= message || '' %></em>
 
     <hr>
 
