Auth proxy small refactoring.

--- a/auth-proxy/views/index.ejs
+++ b/auth-proxy/views/index.ejs
@@ -24,13 +24,13 @@
 
     <hr>
 
-    <form action="/login" method="post">
+    <form action="/signin" method="post">
         <input type="text" name="user" placeholder="user"><br>
         <input type="text" name="password" placeholder="password"><br>
-        <button type="submit">Sign-Ip</button>
+        <button type="submit">Sign-In</button>
     </form>
 
-    <form action="/logout" method="post">
+    <form action="/signout" method="post">
         <button type="submit">Sign-Out</button>
     </form>
 
