--- a/frontend/src/app/view/login/login.component.html
+++ b/frontend/src/app/view/login/login.component.html
@@ -1,16 +1,27 @@
 <div class="main-container">
 
-  <form (ngSubmit)="loginHandler(loginForm)" #loginForm="ngForm">
-    <input type="text" name="user" ngModel required><br>
-    <input type="password" name="password" ngModel required><br>
-    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+  <h3>Login</h3>
+
+  <form (ngSubmit)="signinHandler(signinForm)" #signinForm="ngForm">
+    <input type="text" name="user" placeholder="username" ngModel required><br>
+    <input type="password" name="password" placeholder="password" ngModel required><br>
+    <button type="submit" [disabled]="!signinForm.valid">Login</button>
   </form>
 
-  <hr>
-
-  <form (ngSubmit)="logoutHandler()">
+  <h3>Logout</h3>
+  
+  <form (ngSubmit)="signoutHandler()">
     <button type="submit">Logout</button>
   </form>
+
+  <h3>Create New Account</h3>
+
+  <form (ngSubmit)="signupHandler(signupForm)" #signupForm="ngForm">
+    <input type="text" name="user" placeholder="username" ngModel required><br>
+    <input type="password" name="password" placeholder="password" ngModel required><br>
+    <input type="password" name="passwordRepeat" placeholder="repeat password" ngModel required><br>
+    <button type="submit" [disabled]="!signupForm.valid">Create</button>
+  </form>  
 
 </div>
 
