Favorite scenarios / Add to fav / Remove fav

--- a/frontend/src/app/components/top-menu/top-menu.component.html
+++ b/frontend/src/app/components/top-menu/top-menu.component.html
@@ -1,6 +1,8 @@
 <ul class="topmenu">
   <li class="topmenu-item page-action" (click)="onActionClick.emit('Run')">Run</li>
   <li class="topmenu-item page-action" (click)="onActionClick.emit('Clone')">Clone</li>
+  <li class="topmenu-item page-action" (click)="onActionClick.emit('Add to Fav')">Add to Fav</li>
+  <li class="topmenu-item page-action" (click)="onActionClick.emit('Remove Fav')">Remove Fav</li>
   <li class="topmenu-item page-action" (click)="onActionClick.emit('Delete')">Delete</li>
   <li class="topmenu-item page-action topmenu-item--main"><button type="submit">Save</button></li>
 </ul>
