Remove all history records

--- a/frontend/src/app/view/history-record/history-record.component.html
+++ b/frontend/src/app/view/history-record/history-record.component.html
@@ -2,6 +2,8 @@
   [title]="'History'"
 >
 
+  <button (click)="deleteAllRecords()">Delete all records</button>
+
   <app-menu-section
     [icon]="'ballot'"
     [header]="'Completed jobs'"
