--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -66,11 +66,19 @@
                name="misMatchThreshold"
                placeholder="0.0 - 1.0">
       </div>
+    </div>
 
+    <div class="row">
+      <div class="col l5 m12 s12">
+        <label>Elements selectors</label>
+        <input class="control-text" type="text"
+               [ngModel]="(selectedScenario$ | async).selectors"
+               name="selectors">
+      </div>
     </div>
 
 
-    <app-section-subheader [text]="'Waiting'"></app-section-subheader>
+      <app-section-subheader [text]="'Waiting'"></app-section-subheader>
     <div class="row">
 
       <div class="col l5 m12 s12">
