--- a/backend/views/configuration.ejs
+++ b/backend/views/configuration.ejs
@@ -70,9 +70,9 @@
 
     <h3>Viewports</h3>
     <ul>
-        <li><input type="checkbox" name="" id=""><label for="">1366 x768</label></li>
-        <li><input type="checkbox" name="" id=""><label for="">1600 x 900</label></li>
-        <li><input type="checkbox" name="" id=""><label for="">1920 x 1080</label></li>
+        <li><input type="checkbox" name="" id="view1" class="v1"><label for="">1366 x768</label></li>
+        <li><input type="checkbox" name="" id="view2" class="v2"><label for="">1600 x 900</label></li>
+        <li><input type="checkbox" name="" id="view3" class="v3"><label for="">1920 x 1080</label></li>
     </ul>
 
     <h3>Pages</h3>
