--- a/frontend/src/app/view/configuration/configuration.component.html
+++ b/frontend/src/app/view/configuration/configuration.component.html
@@ -209,13 +209,11 @@
       <app-section-subheader [text]="'History'"></app-section-subheader>
 
       <ul class="history">
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-failed">cancel</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
-        <li class="history-record"><i class="material-icons status-success">check_circle</i><span>2020/03/31 00:34:16</span></li>
+        <li class="history-record" *ngFor="let h of currentScenarioHistory$ | async">
+          <i *ngIf="h.state === 'Passed'" class="material-icons status-success">check_circle</i>
+          <i *ngIf="h.state === 'Failed'" class="material-icons status-failed">cancel</i>
+          <span>{{h.startedAt | date}}</span>
+        </li>
       </ul>
     </div>
 
