--- a/frontend/src/app/components/section-header/section-header.component.css
+++ b/frontend/src/app/components/section-header/section-header.component.css
@@ -3,11 +3,27 @@
 
   margin-top: 36px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   padding-bottom: 8px;
   border-bottom: 2px solid #C9CBCF;
   color: var(--headers-main);
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
+
+.actions > span {
+  cursor: pointer;
+}
+.actions > span:hover {
+  text-decoration: underline;
+}
+.actions > span + span {
+  margin-left: 1.5em;
 }
 
 .material-icons {
