--- a/frontend/src/app/components/section-header/section-header.component.html
+++ b/frontend/src/app/components/section-header/section-header.component.html
@@ -1,4 +1,11 @@
 <div class="header-container">
-  <i *ngIf="icon" class="material-icons small">{{ icon }}</i>
-  <h2> {{ text }}</h2>
+  <div class="header">
+    <i *ngIf="icon" class="material-icons small">{{ icon }}</i>
+    <h2> {{ text }}</h2>
+  </div>
+
+  <div class="actions" *ngIf="actions && actions.length > 0">
+    <span *ngFor="let action of actions" (click)="actionClickHandler(action)">{{ action }}</span>
+  </div>
+
 </div>
