frontend: refactor filters funcs, make it easier to reuse...

--- a/frontend/src/app/view/dashboard/dashboard.component.html
+++ b/frontend/src/app/view/dashboard/dashboard.component.html
@@ -31,6 +31,6 @@
 
 <div class="history-block">
 
-  <app-history-table [filter]="currentHistoryFilter"></app-history-table>
+  <app-history-table [filters]="currentHistoryFilters"></app-history-table>
 
 </div>
