--- a/frontend/src/app/layouts/overview-layout/overview-layout.component.html
+++ b/frontend/src/app/layouts/overview-layout/overview-layout.component.html
@@ -1,3 +1,33 @@
-<p>
-  overview-layout works!
-</p>
+<main>
+    <div class="content">
+      <div class="row widgets-row">
+        <div class="column">
+          <div>column-1</div>
+          <div class="action">action</div>
+        </div>
+        <div class="column except-xs">
+          <div class="widgets-grid">column-2</div>
+        </div>
+        <div class="column except-xs">column-3</div>
+      </div>
+      <div class="row data-row">
+        <div class="column-1">
+          <div class="row-title"><h3>row-title</h3><span>actions</span></div>
+          <ng-content select="favorite-scenarios"></ng-content>
+          <div class="card">card 1</div>
+          <div class="card">card 2</div>
+          <div class="card">card 3</div>
+          <div class="card">card 4</div>
+        </div>
+        <div class="column-2">
+          <div class="row-title"><h3>row-title</h3><span>actions</span></div>
+          <ng-content select="recent-jobs"></ng-content>
+          <div class="record">Record 1</div>
+          <div class="record">Record 2</div>
+          <div class="record">Record 3</div>
+          <div class="record">Record 4</div>
+          <div class="record">Record 5</div>
+        </div>
+      </div>
+    </div>
+</main>
