--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,14 @@
+<!--
 <div class="app-container">
 
   <app-page-header></app-page-header>
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 
+</div>
+-->
+
+<div class="container container--colorful">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
 </div>
