--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,128 @@
+* {
+  box-sizing: border-box;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+ul {
+  padding: 0;
+}
+li {
+  padding: 5px 10px;
+  margin: 0;
+  display: block;
+}
+
+:root {
+  --navbar-size: 70px;
+  --navbar-size-xs: 50px;
+  --sidebar-size: 25vw;
+
+  --card-height: 20vh;
+
+  --humburger-width: 90%;
+  --humburger-pos-right: 0px;
+  --humburger-pos-top: 0px;
+  --humburger-pos-left: none;
+  --humburger-pos-bottom: none;
+
+  --xs-size: 600px;
+  --xs-title-actions-top: none;
+  --xs-title-actions-right: 7vw;
+  --xs-title-actions-left: none;
+  --xs-title-actions-bottom: 2vh;
+
+  --xs-data-placeholder-margin-bottom: 6vh;
+}
+
+.container.container--colorful { background: rgb(245, 245, 245); }
+.container.container--colorful nav { background: rgb(232, 232, 241); }
+.container.container--colorful nav .menu .logo { background: darkviolet; }
+.container.container--colorful nav .account { background: gold; }
+.container.container--colorful nav .humburger ul { background: indigo; }
+.container.container--colorful nav .humburger ul li:hover { background: gold; }
+.container.container--colorful nav .humburger ul li.account { background: gold; }
+.container.container--colorful main .sidebar { background: rgb(240, 240, 240); }
+.container.container--colorful main .sidebar .filters { background: rgb(255, 246, 251); }
+.container.container--colorful main { background: rgb(255, 255, 255); }
+.container.container--colorful main .content { background: rgb(255, 253, 249); }
+.container.container--colorful main .content .description { background: rgb(217, 219, 223); }
+.container.container--colorful main .content .filters { background: rgb(252, 246, 249); }
+.container.container--colorful main .content .actions { background: rgb(233, 227, 217); }
+.container.container--colorful main .content .title-row .title-header { background: rgb(255, 255, 255); }
+.container.container--colorful main .content .title-actions-item { background: rgb(187, 187, 187); }
+.container.container--colorful main .content .data-placeholder { background: rgb(255, 255, 255); }
+.container.container--colorful main .content .data-placeholder .card { background: rgb(234, 245, 255); border: 1px solid rgb(180, 180, 180); }
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  height: var(--navbar-size);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 10;
+}
+nav .menu {
+  display: flex;
+  align-items: center;
+}
+nav .menu .logo { }
+nav .menu ul { }
+nav .menu ul li { float: left; display: block; margin: 0;}
+nav .account { }
+nav .humburger { display: none; }
+
+@media (min-width: 2049px) { .xxl1 { width: 6.5%; } }
+@media (max-width: 2048px) { .xl2 { width: 12.5%; } }
+@media (max-width: 1600px) { .l3 { width: 25%; } }
+@media (max-width: 1200px) { .m4 { width: 33.333%; } }
+@media (max-width: 800px)  { .s6 { width: 50%; } }
+@media (max-width: 600px)  { .xs12 { width: 100%; } }
+
+@media (min-width: 601px)  { .xs-only { display: none; } }
+@media (max-width: 600px)  { .xs-only { display: block; } }
+@media (min-width: 601px)  { .except-xs { display: block; } }
+@media (max-width: 600px)  { .except-xs { display: none; } }
+
+@media (max-width: 600px) {
+
+  nav {
+    position: fixed;
+    height: var(--navbar-size-xs);
+  }
+  nav .humburger { display: block; }
+  nav .humburger ul { display: none; }
+  nav .humburger ul li { padding: 0; display: block;}
+  nav .humburger ul li.account { }
+  nav .humburger:hover ul { display: block; }
+  nav .humburger ul {
+    position: fixed;
+    top: var(--humburger-pos-top);
+    right: var(--humburger-pos-right);
+    left: var(--humburger-pos-left);
+    bottom: var(--humburger-pos-bottom);
+    z-index: 10;
+    width: var(--humburger-width);
+  }
+
+  nav .menu ul { display: none; }
+  nav .account { display: none; }
+
+}
+
+
+
+
+/*
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
 
@@ -58,7 +183,7 @@
 
   --control-label: #5c5c5c;
   --control-placeholder: #cacaca;
-  --control-parameter-value: rgba(255,255,255, 0.75); /* #ffffff 75%*/
+  --control-parameter-value: rgba(255,255,255, 0.75);
 
   --accent-success: #5ed17f;
   --accent-failed: #cd3636;
@@ -86,7 +211,7 @@ h1 {
   font-size: 45px;
   font-weight: 900;
   line-height: .9;
-  letter-spacing: 1px; /*5%*/
+  letter-spacing: 1px;
   margin: 0;
   padding: 0;
   text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
@@ -106,7 +231,7 @@ h3 {
 h4 {
   font-size: 14px;
   font-weight: 700;
-  letter-spacing: 1px; /*5%*/
+  letter-spacing: 1px;
   margin: 0;
   padding: 0;
 }
@@ -154,3 +279,6 @@ h5 {
 }
 
 @keyframes rotate { 100% { transform: rotate(360deg); } }
+
+
+*/
